--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ rocket_cors = "0.5.0-beta-2"
 dotenv = "0.9.0"
 diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
 r2d2-diesel = "1.0"
-r2d2 = "0.8"
+r2d2 = "0.8.9"
 tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
 sha-1 = "0.10.0"
 rand = "0.8.4"
 hex = "0.4.3"
+async-trait = "0.1.52"
