--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
-rocket_cors = "0.5.0-beta-2"
+rocket_cors = "0.6.0-alpha1"
 dotenv = "0.9.0"
 diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
 r2d2-diesel = "1.0"
