Finished embed route

--- a/default.env
+++ b/default.env
@@ -12,3 +12,11 @@ upload=upload/
 
 # Database url. Must be valid!
 DATABASE_URL=postgres://username:password@host:port/database
+
+# Embed settings
+embed_description="File"
+embed_color="#ffffff"
+download_url="http://localhost:6942/d/"
+
+# Chunk size in KiB
+chunk_size=2048
