--- a/default.env
+++ b/default.env
@@ -2,13 +2,12 @@
 port=8080
 
 # Base path of the api.
-base=/
+api_base=/api/
 
-# Directory for temporary files. Must exist!
-tmp=tmp/
-
-# Directory for uploaded files. Must exist!
-upload=upload/
+# Directories
+tmp_dir=tmp/ # Directory for temporary files. Must exist!
+upload_dir=upload/ # Directory for uploaded files. Must exist!
+web_dir=web/ # Optional, only relevant when web_host is set!
 
 # Database url. Must be valid!
 DATABASE_URL=postgres://username:password@host:port/database
@@ -16,7 +15,14 @@ DATABASE_URL=postgres://username:password@host:port/database
 # Embed settings
 embed_description="File"
 embed_color="#ffffff"
-download_url="http://localhost:6942/d/"
+download_url="http://localhost:6942/api/d/"
 
 # Chunk size in KiB
 chunk_size=2048
+
+# Options for hosting the frontend
+web_host=true
+web_base=/
+
+# This can be used to rewrite the embed route
+embed_route_base=/
