--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build and push Docker images
       # You may pin to the exact commit or the version.
       # uses: docker/build-push-action@7f9d37fa544684fb73bfe4835ed7214c255ce02b
-    - uses: docker/build-push-action@v2.9.0
+      uses: docker/build-push-action@v2.9.0
       with:
         # List of a customs host-to-IP mapping (e.g., docker:10.180.0.1)
         #add-hosts: # optional
