--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: rust-toolchain
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        # Rust toolchain name.
+
+        toolchain: nightly # optional
+        # Target triple to install for this toolchain
+        #target: # optional
+        # Set installed toolchain as default
+        default: true # optional
+        # Set installed toolchain as an override for a directory
+        override: true # optional
+        # Name of the group of components to be installed for a new toolchain
+        #profile: # optional
+        # Comma-separated list of components to be additionally installed for a new toolchain
+        #components: # optional
     - name: rust-cargo
       # You may pin to the exact commit or the version.
       # uses: actions-rs/cargo@ae10961054e4aa8b4aa7dffede299aaf087aa33b
@@ -41,6 +57,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: rust-toolchain
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        # Rust toolchain name.
+
+        toolchain: nightly # optional
+        # Target triple to install for this toolchain
+        #target: # optional
+        # Set installed toolchain as default
+        default: true # optional
+        # Set installed toolchain as an override for a directory
+        override: true # optional
+        # Name of the group of components to be installed for a new toolchain
+        #profile: # optional
+        # Comma-separated list of components to be additionally installed for a new toolchain
+        #components: # optional
     - name: rust-cargo
       # You may pin to the exact commit or the version.
       # uses: actions-rs/cargo@ae10961054e4aa8b4aa7dffede299aaf087aa33b
@@ -67,6 +99,22 @@ jobs:
     runs-on: macos-latest
 
     steps:
+    - name: rust-toolchain
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        # Rust toolchain name.
+
+        toolchain: nightly # optional
+        # Target triple to install for this toolchain
+        #target: # optional
+        # Set installed toolchain as default
+        default: true # optional
+        # Set installed toolchain as an override for a directory
+        override: true # optional
+        # Name of the group of components to be installed for a new toolchain
+        #profile: # optional
+        # Comma-separated list of components to be additionally installed for a new toolchain
+        #components: # optional
     - name: rust-cargo
       # You may pin to the exact commit or the version.
       # uses: actions-rs/cargo@ae10961054e4aa8b4aa7dffede299aaf087aa33b
