--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: rust-toolchain
       uses: actions-rs/toolchain@v1.0.6
       with:
@@ -57,6 +59,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: rust-toolchain
       uses: actions-rs/toolchain@v1.0.6
       with:
@@ -99,6 +103,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: rust-toolchain
       uses: actions-rs/toolchain@v1.0.6
       with:
