--- a/default.env
+++ b/default.env
@@ -26,3 +26,6 @@ web_base=/
 
 # This can be used to rewrite the embed route
 embed_route_base=/
+
+# This can be used to rewrite the download route
+download_route_base=/
