--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.0.1"
 actix-cors = "0.6.1"
+actix-files = "0.6.0"
 dotenv = "0.15.0"
 diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
 r2d2-diesel = "1.0"
