--- a/default.env
+++ b/default.env
@@ -8,7 +8,7 @@ api_base=/api/
 # Directories
 tmp_dir=tmp/ # Directory for temporary files. Must exist!
 upload_dir=upload/ # Directory for uploaded files. Must exist!
-web_dir=web/ # Optional, only relevant when web_host is set!
+web_dir=web/ # Directory for web files. Must exist!
 
 # Database url. Must be valid!
 DATABASE_URL=postgres://username:password@host:port/database
@@ -20,13 +20,3 @@ download_url="http://localhost:6942/api/d/"
 
 # Chunk size in KiB
 chunk_size=2048
-
-# Options for hosting the frontend
-web_host=true
-web_base=/
-
-# This can be used to rewrite the embed route
-embed_route_base=/
-
-# This can be used to rewrite the download route
-download_route_base=/
