Updated to newer crate and rust versions, fixed database stuff (now needing a mutable connection)
Also changed the copyright headers, because KotwOSS doesn't exist anymore.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 			"commentbegin": "/*",
 			"commentprefix": "*",
 			"commentend": "*/",
-			"company": "KotwOSS"
+			"company": "GamePowerX"
 		}
 	},
 	"fileHeaderComment.template": {
