--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,27 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "uploadserver"
 version = "2.0.3"
-edition = "2023"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.1"
-actix-cors = "0.6.1"
-actix-files = "0.6.0"
+actix-web = "4.4.1"
+actix-cors = "0.7.0"
+actix-files = "0.6.5"
 dotenv = "0.15.0"
-diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
+diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
 r2d2-diesel = "1.0"
-r2d2 = "0.8.9"
-tokio = { version = "1.4.0", features = ["full"] }
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = { version = "1.0.79" }
-sha-1 = "0.10.0"
-rand = "0.8.4"
+r2d2 = "0.8.10"
+tokio = { version = "1.35.1", features = ["full"] }
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = { version = "1.0.111" }
+sha-1 = "0.10.1"
+rand = "0.8.5"
 hex = "0.4.3"
-async-trait = "0.1.52"
-futures = "0.3.21"
-futures-core = "0.3.21"
-pin-project-lite = "0.2.9"
+async-trait = "0.1.77"
+futures = "0.3.30"
+futures-core = "0.3.30"
+pin-project-lite = "0.2.13"
